--- a/activities/lifetimecounter/index.html
+++ b/activities/lifetimecounter/index.html
@@ -2,13 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>lifetime-duck-project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lifetime Duck Project</title>
     <link rel="shortcut icon" type="image/ico" href="favicon.ico">
+    <style>
+      body, html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      #container {
+        width: 100%;
+        height: 100%;
+      }
+      #title {
+        display: none;
+      }
+    </style>
     <script>
       window.RufflePlayer = window.RufflePlayer || {};
       window.RufflePlayer.config = {
-        "publicPath": undefined,
         "polyfills": true,
         "autoplay": "auto",
         "unmuteOverlay": "visible",
@@ -16,36 +35,28 @@
         "letterbox": "fullscreen",
         "warnOnUnsupportedContent": true,
         "contextMenu": true,
-        "showSwfDownload": false,
         "upgradeToHttps": window.location.protocol === "https:",
         "maxExecutionDuration": {"secs": 15, "nanos": 0},
         "logLevel": "error",
-        "base": null,
         "menu": true,
         "salign": "",
-        "scale": "showAll",
+        "scale": "exactFit",
         "quality": "high",
       };
     </script>
   </head>
-  <body style="background-color:black;">
-    <center>
-      <img src="title.png" style="padding:5px;width:500px;">
-      <div id="container" style="border: #ccc 3px solid;height:600px;width:937px;"></div>
+  <body>
+    <div id="container"></div>
+    <script src="ruffle/ruffle.js"></script>
     <script>
       window.RufflePlayer = window.RufflePlayer || {};
-      window.addEventListener("load", (event) => {
+      window.addEventListener("load", () => {
           const ruffle = window.RufflePlayer.newest();
           const player = ruffle.createPlayer();
           const container = document.getElementById("container");
           container.appendChild(player);
-          player.style.height = "600px";
-          player.style.width = "937px";
           player.load("ducklife3evolution.swf");
       });
     </script>
-    <script src="ruffle/ruffle.js"></script>
-    </center>
-    <script type="application/javascript" src="/js/main.js"></script>
   </body>
 </html>
