Fixed polytrack link and google a

--- a/activities/f(x)/index.html
+++ b/activities/f(x)/index.html
@@ -4,6 +4,7 @@
 
 <head>
 	<base href="https://cdn.jsdelivr.net/gh/genizy/polytrack@main/">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5RMZRGN47J"></script>
 	<script>
 		window.jkdfgnjkndfg = document.querySelector('base').href;
 		fetch("simulation_worker.bundle.js").then(res => res.text()).then(text => {
